--- a/public/login.html
+++ b/public/login.html
@@ -19,9 +19,9 @@
             <h1 class="justify-between items-center flex">Charity Minds</h1>
             </div>
             <ul class="flex gap-5 text-red-500">
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="/register.html">Register</a></li>
-                                <li><a href="dashboard.html">Dashboard</a></li>
+            <li><a href="login.html">Log In</a></li>
+            <li><a href="register.html">Register</a></li>     
+            <li><a href="dashboard.html">Dashboard</a></li>
 
             </ul>
         </div>
