--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -25,8 +25,8 @@
             </nav>
             </div>
 
-  <section class="m-1 border m flex items-stretch max-w-24 rounded-md justify-between shadow-xl/20">
-  <div class="bg-red-500 p-4 rounded-md text-white">
+  <section class="m-1 border m flex items-stretch max-w-24 rounded-md justify-between shadow-xl/20 gap-0.5">
+  <div class="bg-red-500 p-4 rounded-md text-white gap-1">
     <h4>70</h4>
     <p>Users</p>
   </div>
