--- a/public/register.html
+++ b/public/register.html
@@ -8,25 +8,35 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div class="bg-blue-400 h-20">
+  <div class="bg-blue-400">
 
-            <nav class="flex justify-between items-center p-7">
-                <div class="flex justify-items-start">
+            <nav class="flex justify-between container mx-auto items-center flex-col py-5 sm:flex-col md:flex-row">
+                <div class="flex flex-row">
                    <img class="h-10 "src="images/Logo.png" alt="">
 
                   <h6 class="logo">Charity Minds</h6>
 
-                </div>
-                <ul class="flex gap-5 text-red-500">
+                </div class="flex flex-row">
+
+                <div>
+                  <ul class="flex gap-5 text-red-500">
+            
                     <li><a href="login.html">Login<a></li>
                     <li><a href="register.html">Register</a></li>
                     <li><a href="dashboard.html">Dashboard</a></li>
                 </ul>
+              </div>
+
+
             </nav>
             </div>
 
-      <main class="flex items-center justify-center min-h-screen bg-white-100 px-6">
-  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+      <!-- <main class="flex items-center justify-center min-h-screen bg-white-100 px-6">
+  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md"> -->
+
+     <main class="flex justify-center items-center min-h-[calc(100vh-5rem)] bg-white-400 px-4">
+    <div class="bg-white  rounded-lg shadow-lg p-8 w-full max-w-md">
+
     <h1 class="text-2xl font-bold mb-6 text-center">Create Account</h1>
 
     <form 
